refactor: actualizar historia

--- a/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
+++ b/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
@@ -6,13 +6,13 @@
 
 ## Historia de Usuario
 
-**Como** expedidor,  
+**Como** expedidor de pólizas de Vida Grupo,  
 **Quiero** crear beneficiarios tipo "Dummy" (Persona) mediante carga masiva dejando los campos de identificación vacíos,  
-**Para** agilizar la emisión sin detenerse por documentos faltantes, permitiendo además reemplazar cualquier lista de beneficiarios previa por la nueva información cargada.
+**Para** agilizar la emisión de pólizas sin detenerme por documentos faltantes, permitiendo además reemplazar cualquier lista de beneficiarios previa por la nueva información cargada.
 
 ## Descripción
 
-Permitir la creación de beneficiarios sin número de identificación (Dummy) de forma masiva para evitar bloqueos en la suscripción dentro del proceso de carga masiva de riesgos y beneficiarios en pólizas de Vida Grupo. El sistema determinará automáticamente si debe crear un beneficiario "Dummy" o un "Contacto Completo" basándose en si los campos de identificación (Tipo y Número de Documento) vienen vacíos o diligenciados en el archivo de carga. Adicionalmente, esta carga funciona como una actualización completa de la designación de beneficiarios, asegurando que la información en el sistema refleje exactamente lo último cargado por el usuario (sobrescritura total, no fusión).
+Permitir la creación de beneficiarios sin número de identificación (Dummy) de forma masiva para evitar bloqueos en la suscripción dentro del proceso de carga masiva de riesgos y beneficiarios en pólizas de Vida Grupo. El sistema determinará automáticamente si debe crear un beneficiario "Dummy" o un "Contacto Completo" basándose en si los campos de identificación (Tipo y Número de Documento) vienen vacíos o diligenciados en el archivo de carga. Adicionalmente, esta carga funciona como una **actualización completa** de la designación de beneficiarios, asegurando que la información en el sistema refleje exactamente lo último cargado por el usuario (sobrescritura total, no fusión).
 
 ---
 
@@ -22,43 +22,37 @@ Permitir la creación de beneficiarios sin número de identificación (Dummy) de
 
 - **Dado** que el expedidor está diligenciando la plantilla de carga masiva para un riesgo
 - **Cuando** ingrese el Nombre del beneficiario pero deje **VACÍOS** tanto el campo "Tipo de Documento" como el "Número de Documento"
-- **Entonces** el sistema debe crear el beneficiario exitosamente como un contacto tipo **Persona** con identificación Dummy interna
+- **Entonces** el sistema debe crear el beneficiario exitosamente como un contacto tipo **Persona** con identificación Dummy interna y relacionarlo con el asegurado en cuestión
 
-### Escenario 2: Validación de Integridad (Campos Parciales - Tipo Vacío)
+### Escenario 2: Validación de Integridad (Campos Parciales)
 
-- **Dado** que se procesa el archivo de carga
-- **Cuando** el sistema detecta un registro donde existe un "Número de Documento" pero el "Tipo de Documento" está vacío
-- **Entonces** debe rechazar ese registro específico y generar una entrada en el archivo de errores con el mensaje "Error: El tipo de documento es obligatorio si se ingresa un número"
+- **Dado** que se procesa el archivo de carga masiva en Azure Data Factory (Fase 1)
+- **Cuando** el sistema detecta un registro donde existe un "Número de Documento" pero el "Tipo de Documento" está vacío (o viceversa)
+- **Entonces** debe rechazar ese registro específico y generar una entrada en el archivo de errores de Fase 1 indicando la inconsistencia
 
-### Escenario 3: Validación de Integridad (Campos Parciales - Número Vacío)
+### Escenario 3: Crear Contacto Completo (Campos Diligenciados)
 
-- **Dado** que se procesa el archivo de carga
-- **Cuando** el sistema detecta un registro donde existe un "Tipo de Documento" seleccionado pero el "Número de Documento" está vacío
-- **Entonces** debe rechazar ese registro específico y generar una entrada en el archivo de errores con el mensaje "Error: El número de documento es obligatorio si se selecciona un tipo"
+- **Dado** que el expedidor está diligenciando la plantilla de carga masiva para un riesgo
+- **Cuando** ingrese el Nombre del beneficiario y además diligencia tanto el campo "Tipo de Documento" (CC, CE, etc.) como el "Número de Documento" con datos válidos
+- **Entonces** el sistema debe crear el beneficiario como un contacto completo (comportamiento estándar actual) y relacionarlo con el asegurado
 
 ### Escenario 4: Reemplazo Total de Beneficiarios Existentes
 
-- **Dado** que existe un riesgo en el sistema que ya tiene beneficiarios asignados (ej. Beneficiario A y B)
-- **Cuando** se procesa exitosamente una carga masiva para ese mismo riesgo con una nueva lista de beneficiarios (ej. Beneficiario C)
+- **Dado** que existe un riesgo (asegurado) en el sistema que ya tiene beneficiarios asignados (ejemplo: Beneficiario A y B)
+- **Cuando** se procesa exitosamente una carga masiva para ese mismo riesgo con una nueva lista de beneficiarios (ejemplo: Beneficiario C)
 - **Entonces** el sistema debe eliminar la asignación de los beneficiarios antiguos (A y B) y dejar únicamente al nuevo beneficiario (C) asociado al riesgo
 
-### Escenario 5: Visualización en la Interfaz
+### Escenario 5: Carga para Asegurado sin Beneficiarios Previos
 
-- **Dado** que se creó un beneficiario Dummy mediante la lógica de campos vacíos
-- **Cuando** se consulte el riesgo en la interfaz de usuario (PCF)
+- **Dado** que existe un riesgo (asegurado) en el sistema que NO tiene beneficiarios asignados previamente
+- **Cuando** se procesa exitosamente una carga masiva con una lista de beneficiarios para ese riesgo
+- **Entonces** el sistema debe crear y asociar los nuevos beneficiarios al asegurado (resultado equivalente al reemplazo, pero sin eliminar registros previos porque no existen)
+
+### Escenario 6: Visualización en la Interfaz
+
+- **Dado** que se creó un beneficiario Dummy mediante la lógica de campos vacíos y se procesó exitosamente en Fase 2
+- **Cuando** se consulte el riesgo en las pantallas de consulta de PolicyCenter
 - **Entonces** se debe visualizar el beneficiario creado, mostrando el tipo de documento "Dummy Persona" (o la etiqueta equivalente en UI) asignado automáticamente por el sistema
-
-### Escenario 6: Crear Contacto Completo (Comportamiento Estándar)
-
-- **Dado** que el expedidor está diligenciando la plantilla de carga masiva
-- **Cuando** ingrese el Tipo de Documento seleccionado (CC, CE, etc.) Y el Número de Documento con datos
-- **Entonces** el sistema debe crear un Contacto Completo como funciona actualmente (comportamiento estándar sin cambios)
-
-### Escenario 7: Mantenimiento de Validaciones Existentes - Riesgos Inexistentes
-
-- **Dado** que se procesa un archivo de carga masiva con beneficiarios
-- **Cuando** el sistema detecta en Fase 2 que un riesgo (asegurado) asociado no existe en la Póliza Maestra
-- **Entonces** debe rechazar el registro completo y marcarlo como error en el archivo de errores de Fase 2 (comportamiento actual que debe mantenerse)
 
 ---
 
@@ -66,9 +60,9 @@ Permitir la creación de beneficiarios sin número de identificación (Dummy) de
 
 ### Usuario y Contexto
 
-- **Tipo de usuario:** Expedidor de pólizas de Vida Grupo
-- **Permisos requeridos:** Acceso a "Procesos Masivos" en póliza master desde PolicyCenter
-- **Valor de negocio:** Agilizar la emisión de pólizas sin detenerse por falta de documentos de identificación de beneficiarios, mejorando la experiencia del usuario y reduciendo tiempos de emisión
+- **Tipo de usuario:** Expedidor de pólizas de Vida Grupo con permisos para realizar cargas masivas
+- **Permisos requeridos:** Acceso a póliza master, permisos para ejecutar "Procesos Masivos" (acción estándar de expedidores)
+- **Valor de negocio:** Agilizar el proceso de emisión de pólizas colectivas sin bloqueos por documentos faltantes de beneficiarios, mejorando tiempos de expedición y evitando reprocesos por información incompleta
 
 ### Reglas de Negocio
 
@@ -102,79 +96,92 @@ Permitir la creación de beneficiarios sin número de identificación (Dummy) de
 
 ### Interfaz
 
-**Ubicación:** 
-- Acceder a póliza master en PolicyCenter → Sección "Procesos Masivos"
-- Dashboard de histórico de cargas masivas (LifeCreateMassivelyInsuredsPopup.pcf)
-- Botón "Cargar" para seleccionar archivo CSV/Excel
+**Navegación:**
+1. Usuario accede a la pantalla de **detalle de póliza master** mediante el número de póliza
+2. En la sección **"Acciones"**, hace click para desplegar opciones
+3. Selecciona la opción **"Procesos Masivos"** (se despliegan más opciones)
+4. Hace click en **"Carga Masiva asegurados"** (nombre puede causar confusión, pero aplica tanto para riesgos como beneficiarios)
+5. Se redirige a **LifeCreateMassivelyInsuredsPopup.pcf** (página del histórico de todas las cargas masivas de riesgos y beneficiarios)
+6. En el histórico, hay un botón para **"Descargar plantillas de carga"** y otro para **"Hacer la carga"**
+7. Al hacer click en "Hacer la carga", redirige a **MassiveLoadPopup.pcf** (pantalla de carga de archivo)
 
-**Flujo de navegación:**
-1. Usuario accede a póliza master
-2. Navega a sección "Procesos Masivos"
-3. Click en "Cargar"
-4. Selecciona archivo CSV/Excel con datos de beneficiarios
-5. Sistema procesa archivo en dos fases (Fase 1: Azure validación estructura, Fase 2: PolicyCenter validación negocio)
-6. Usuario consulta resultados en dashboard con estados en tiempo real
+**Pantallas Involucradas:**
+- **LifeCreateMassivelyInsuredsPopup.pcf**: Dashboard del histórico de cargas masivas (riesgos y beneficiarios)
+- **MassiveLoadPopup.pcf**: Popup de carga de archivo masivo
 
-**Elementos de interfaz:**
-- Dashboard de histórico con tabla de cargas (MD5, fecha, estado, registros exitosos/fallidos)
-- Botón "Cargar" para iniciar nueva carga
-- Botón "Refrescar Dashboard" para actualizar estados
-- Botón "Descargar Errores Fase X" para obtener archivo de errores
+**Plantilla de Carga:**
+- La plantilla actual **ya contiene** las columnas "Tipo de Documento" y "Número de Documento"
+- **No se requieren modificaciones** a la plantilla existente
+- La plantilla soporta carga de beneficiarios con las columnas estándar (Nombre, Tipo Documento, Número Documento, Porcentaje, Parentesco, etc.)
+
+**Proceso de Carga:**
+- La carga se procesa de forma **asíncrona en segundo plano** (no sincrónica)
+- **No se requiere confirmación o advertencia** al usuario antes de sobrescribir beneficiarios existentes, ya que el proceso es no bloqueante y el usuario puede continuar trabajando
+
+**Visualización Post-Carga:**
+- Una vez creado el beneficiario Dummy exitosamente, **ya se podrá visualizar** en las pantallas de consulta de PolicyCenter
+- El sistema muestra automáticamente el tipo "Dummy Persona" (o etiqueta equivalente)
+- **No se requiere implementación adicional** para visualización (Criterio 6 ya está cubierto por funcionalidad existente)
+- Lo único que se debe garantizar es que el beneficiario se **cree y relacione correctamente** con el asegurado en cuestión
 
 ### Sistemas Externos
 
 **Azure Data Factory (Fase 1 - Validación de Estructura):**
-- **Ajuste requerido:** Modificar validaciones de expresiones regulares para permitir nulos en columnas de Tipo y Número de documento
-- **Archivo de configuración:** controlSchema que define las reglas de validación de estructura
-- **Output:** Registros válidos pasan a Fase 2, registros con errores generan archivo ErrorFase1_{md5}.csv
+- Responsable de la validación de formato y estructura del archivo mediante expresiones regulares
+- **Ajuste requerido:** Modificar validaciones para **permitir campos vacíos** en las columnas "TipoDocumento" y "NumeroDocumento" (actualmente estas columnas son obligatorias en Fase 1)
+- **Nota:** No es permitir valores NULL en base de datos, sino permitir celdas vacías en el archivo CSV/Excel durante la validación de Azure
 
-**Azure Functions:**
-- Upload: Recepción de bloques de archivo (64KB por bloque)
-- Status: Consulta y actualización de estados en Cosmos DB
-- Download: Generación y descarga de archivos de errores
-
-**Cosmos DB:**
-- Almacenamiento de registros de carga con estados
-- Contenedor MASSIVE_UPLOAD para metadatos de carga
-- Contenedor UPLOAD_DETAIL para registros individuales
+**PolicyCenter Workqueues (Fase 2 - Validación de Negocio):**
+- **Workqueue Enrichment**: Valida reglas de negocio y transforma datos según lógica de decisión
+- **Workqueue BulkInsert**: Inserta/actualiza los beneficiarios en base de datos según operación (Ingreso/Modificación/Cancelación/Renovación)
 
 **RabbitMQ:**
-- Mensajería asíncrona entre Azure y PolicyCenter
-- Notificaciones de cambio de estado (NotifyPhaseStarted, NotifyPhaseError, RecordReadyForProcessing)
+- Mensajería asíncrona entre Azure Data Factory y PolicyCenter para notificaciones de estado de carga
 
-**WorkQueues en PolicyCenter (Fase 2 - Validación de Negocio):**
-- **Workqueue Enrichment:** Validación de campos de negocio y transformación de datos
-- **Workqueue BulkInsert:** Inserción masiva de registros en PolicyCenter según volumen (Low/Medium/High)
-- **Ajuste requerido:** Lógica de validación debe permitir crear beneficiarios Dummy cuando ambos campos de identificación estén vacíos
+**Cosmos DB:**
+- Almacenamiento de registros de carga, errores de validación por fase y metadatos del proceso
+
+**Azure Storage Account:**
+- Almacenamiento de archivos originales y archivos de errores generados (ErrorFase1_{md5}.csv, ErrorFase2_{md5}.csv)
 
 ---
 
 ## Contexto y Referencias
 
-**Arquitectura:** docs/architecture/flujo-carga-masiva-riesgos-beneficiarios.md (855 líneas documentadas)
+**Arquitectura:**
+- [Flujo Carga Masiva de Riesgos y Beneficiarios](../architecture/flujo-carga-masiva-riesgos-beneficiarios.md) - Documentación end-to-end del proceso de 2 fases (Azure + PolicyCenter)
+- [Architecture PolicyCenter](../architecture/architecture-policycenter.md) - Arquitectura del componente principal (Gosu/Java, Guidewire 8.0.7)
 
-**Historias relacionadas:** Ninguna (esta es una funcionalidad nueva independiente)
+**Historias relacionadas:**
+- #915240: Bug - Organizar campos errados detalle de cobro
+- #830317: Ajustar comportamiento descarga detalle cobro
 
 **Lecciones aprendidas:**
-- El proceso de carga masiva es completamente asíncrono (no bloqueante) para permitir al usuario continuar trabajando
-- Las validaciones se dividen en dos fases independientes: Fase 1 (estructura en Azure) y Fase 2 (negocio en PolicyCenter)
-- Los archivos de errores son específicos por fase para facilitar la corrección del usuario
-- El dashboard debe refrescarse manualmente para ver estados actualizados (no hay auto-refresh)
-- Las validaciones de integridad de datos son críticas para evitar inconsistencias en base de datos
+
+**Del Flujo de Carga Masiva:**
+- **Procesamiento asíncrono en 2 fases:** Fase 1 (Azure - validación estructura/formato) + Fase 2 (PolicyCenter - validación negocio/inserción). Ambas fases deben estar alineadas en sus validaciones.
+- **Workqueues programadas por volumen:** El sistema clasifica cargas en Low/Medium/High y ejecuta workqueues en horarios específicos. Considerar impacto en tiempos de procesamiento.
+- **Archivos de errores por fase:** Usuarios descargan errores específicos de cada fase (ErrorFase1 vs ErrorFase2) para corrección y recarga.
+- **Validación de carga en progreso:** Antes de permitir nueva carga, verificar que no haya otra carga activa para la misma póliza (evitar conflictos).
+
+**De Historias Relacionadas:**
+- **Claridad en mensajes de error:** Los archivos de errores deben especificar claramente qué campo falló y por qué (crítico para corrección por parte del expedidor).
+- **Validación de permisos:** Verificar que el expedidor tenga permisos adecuados antes de iniciar el proceso de carga.
+- **Casos sin resultados:** Si la carga no tiene registros válidos después de Fase 1, mostrar mensaje claro al usuario en el dashboard.
 
 ---
 
 ## Definición de Terminado (Inicial)
 
-- [ ] Beneficiarios Dummy se crean correctamente cuando ambos campos de identificación están vacíos
-- [ ] Validaciones de campos parciales funcionan correctamente generando errores apropiados
-- [ ] Lógica de reemplazo total de beneficiarios funciona correctamente (sobrescritura, no fusión)
-- [ ] Beneficiarios Dummy se visualizan correctamente en la interfaz PCF
-- [ ] Contactos completos continúan creándose correctamente (sin regresión)
-- [ ] Validaciones existentes de riesgos inexistentes continúan funcionando
-- [ ] Azure Data Factory permite nulos en columnas de identificación
-- [ ] Tests unitarios y de integración implementados
-- [ ] Documentación técnica actualizada
+- [ ] Funcionalidad de creación de beneficiarios Dummy implementada según criterios de aceptación
+- [ ] Validaciones de Azure Data Factory ajustadas para permitir campos vacíos en TipoDocumento y NumeroDocumento
+- [ ] Lógica de decisión automática (tabla de 4 escenarios) implementada en Workqueue Enrichment
+- [ ] Lógica de reemplazo total de beneficiarios implementada en Workqueue BulkInsert
+- [ ] Beneficiarios Dummy creados como tipo "Persona" y relacionados correctamente con asegurados
+- [ ] Mensajes de error claros implementados en archivos ErrorFase1 y ErrorFase2 para casos de inconsistencia
+- [ ] Pruebas de carga masiva con diferentes combinaciones de campos (vacíos, completos, parciales) exitosas
+- [ ] Validación de que beneficiarios existentes se reemplazan correctamente (no se fusionan)
+- [ ] Visualización correcta de beneficiarios Dummy en pantallas de consulta de PolicyCenter
 
 ---
 
@@ -182,23 +189,23 @@ Permitir la creación de beneficiarios sin número de identificación (Dummy) de
 
 | Fecha | Versión | Descripción | Autor |
 |-------|---------|-------------|-------|
-| 2025-11-25 | 1.0 | Historia creada por PO (importada y validada) | esteban.colorado (PO) |
+| 2025-12-18 | 1.0 | Historia creada e importada por PO con mejoras de claridad y completitud | esteban.colorado (PO) |
 
 ---
 
 ## Metadata
 
 **Autor:** esteban.colorado (PO)  
-**Fecha:** 2025-11-25  
-**Historias relacionadas:** Ninguna  
-**Origen:** Historia importada desde sistema externo y validada con Método Ceiba
+**Fecha:** 2025-12-18  
+**Historias relacionadas:** #915240, #830317  
+**Modo de creación:** Importar historia existente (validada y mejorada)
 
 ---
 
 ## Métricas de redacción de la historia de usuario con el PO 
 
-**Tiempo con Método Ceiba:** 15 minutos  
-**Tiempo estimado tradicional:** 38 minutos  
-**Optimización:** 61%
+**Tiempo con Método Ceiba:** 12 minutos  
+**Tiempo estimado tradicional:** 30 minutos  
+**Optimización:** 60%
 
 ---
